[tool.poetry]
name = "ai tutor"
version = "0.1.0"
description = "Tublian Challange to create AI chatbot with langchain"
authors = ["DeepeshKalura <deepeshkalurs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
python-dotenv = "^1.0.1"
streamlit = "^1.35.0"
groq = "^0.8.0"
geocoder = "^1.38.1"
blessed = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
